create the html programmatically

--- a/template.html
+++ b/template.html
@@ -97,9 +97,9 @@
     <div class="section">
         <h2>Effective Altruism</h2>
         <ul>
-          <li><strong>{effective_altruism_headline_1}:</strong> {effective_altruism_one_sentence__summary_1} <a href="{effective_altruism_url_1}">EA Forum</a></li>
-          <li><strong>{effective_altruism_headline_2}:</strong> {effective_altruism_one_sentence__summary_2} <a href="{effective_altruism_url_2}">EA Forum</a></li>
-          <li><strong>{effective_altruism_headline_3}:</strong> {effective_altruism_one_sentence__summary_3} <a href="{effective_altruism_url_3}">EA Forum</a></li>
+          <li><strong>{effective_altruism_headline_1}:</strong> {effective_altruism_one_sentence__summary_1} <a href="{effective_altruism_url_1}">{effective_altruism_source_name_1}</a></li>
+          <li><strong>{effective_altruism_headline_2}:</strong> {effective_altruism_one_sentence__summary_2} <a href="{effective_altruism_url_2}">{effective_altruism_source_name_2}</a></li>
+          <li><strong>{effective_altruism_headline_3}:</strong> {effective_altruism_one_sentence__summary_3} <a href="{effective_altruism_url_3}">{effective_altruism_source_name_3}</a></li>
         </ul>
       </div>
     
