added egg prices

--- a/template.html
+++ b/template.html
@@ -119,6 +119,7 @@
       <img src="cid:bynd-chart" alt="Beyond Meat Chart">
       <img src="cid:otly-chart" alt="Oatly Chart">
       <img src="cid:sp500-chart" alt="S&P 500 Chart">
+      <img src="cid:egg-price-chart" alt="USDA Egg Price Chart">
     </div>
   </div>
 </body>
