added beyond meat bond price chart

--- a/template.html
+++ b/template.html
@@ -117,6 +117,7 @@
     <div class="section financial-charts">
       <h2>Financial Charts</h2>
       <img src="cid:bynd-chart" alt="Beyond Meat Chart">
+      <img src="cid:beyond-meat-bond-chart" alt="Beyond Meat Bond Prices">
       <img src="cid:otly-chart" alt="Oatly Chart">
       <img src="cid:sp500-chart" alt="S&P 500 Chart">
       <img src="cid:egg-price-chart" alt="USDA Egg Price Chart">
