added image captions

--- a/template.html
+++ b/template.html
@@ -103,6 +103,14 @@
       color: #333;
       font-weight: 600;
     }
+    /* Image caption styling */
+    .image-caption {
+      text-align: center;
+      font-size: 14px;
+      color: #555;
+      margin-top: 5px;
+      margin-bottom: 15px;
+    }
   </style>
 </head>
 <body>
